@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2004/03/10 11:59:31 xtraeme Exp $
+# $NetBSD: Makefile,v 1.6 2004/05/15 05:01:38 minskim Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-XFCE4_VERSION=	0.2
+XFCE4_VERSION=	0.3.0
 
 DISTNAME=	xfce4-datetime-plugin-${XFCE4_VERSION}
-PKGREVISION=	4
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 calendar plugin
